Revert "Drop reaction buttons spacing fix"
This reverts commit 3f6e5baffbcf9339b208b4649bbe5a3fb2f96f86.

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -63,3 +63,8 @@
 .js-issue-row .js-navigation-open ~ .text-small:last-child {
 	flex-wrap: wrap;
 }
+
+/* Restore margin between reactions on releases #5287 */
+[data-test-selector='release-card'] .social-reaction-summary-item:not(:first-child) {
+	margin-left: 8px !important;
+}
